--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -147,6 +147,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="socket_server.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="socket_server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
